<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/person" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/hello" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_1" />

    <TextView
        android:id="@+id/store_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/store"
        android:textColor="#733F0E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/store_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-20dp"
        android:gravity="center"
        android:text="@string/lokasii"
        android:textColor="#733F0E"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tempat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/lokasi_text"
        android:textColor="#733F0E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/maps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="-25dp"
        android:gravity="center"
        android:text="@string/map_text"
        android:textColor="#733F0E"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="370dp"
        android:layout_marginTop="-25dp"
        android:src="@drawable/location" />


    <Button
        android:id="@+id/see_menus_button"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:text="Lihat Menu"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:strokeColor="#F8C407"
        app:strokeWidth="1dp" />

</LinearLayout>