<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pizza">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="wrap_content"
            android:layout_height="232dp"
            android:src="@drawable/steak2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:text="Steak"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Steak"
            android:textColor="@color/font_color"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:text="Harga: Rp 80.000,00"
            android:textColor="@color/font_color"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:justificationMode="inter_word"
        android:text="@string/desc_steak"
        android:textColor="@color/font_color"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/order_id_button"
        android:layout_height="wrap_content"
        android:layout_width="290dp"
        android:layout_marginLeft="60dp"
        android:backgroundTint="@color/button_color"
        app:cornerRadius="0dp"
        android:layout_marginTop="15dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp"
        android:text="@string/pesan" />

    <Button
        android:id="@+id/back_id_button"
        android:layout_height="wrap_content"
        android:layout_width="290dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/button_color"
        app:cornerRadius="0dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp"
        android:text="@string/Kembali" />

</LinearLayout>